// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A single Tab component has to work with "Tabs.Content" from outside 1`] = `
<LinkedContent
  selected_key="second"
>
  <Tabs
    align="left"
    class={null}
    className={null}
    content={null}
    content_spacing={true}
    content_style={null}
    data={
      Array [
        Object {
          "key": "first",
          "title": "First",
        },
        Object {
          "key": "second",
          "title": "Second",
        },
        Object {
          "key": "third",
          "title": "Third",
        },
      ]
    }
    id="linked"
    label={null}
    no_border={false}
    on_change={null}
    on_click={null}
    on_focus={null}
    on_mouse_enter={null}
    prerender={false}
    prevent_rerender={false}
    render={null}
    scroll={null}
    selected_key="second"
    skeleton={null}
    tab_element="button"
    tabs_spacing={null}
    tabs_style={null}
    use_hash={false}
  >
    <TabsWrapper>
      <div
        className="dnb-tabs"
      >
        <TabsList>
          <div
            className="dnb-tabs__tabs dnb-tabs__tabs--left"
          >
            <ScrollNavButton
              className=""
              icon="chevron_left"
              onMouseDown={[Function]}
            >
              <Button
                aria-hidden={true}
                bounding={true}
                class={null}
                className="dnb-tabs__scroll-nav-button"
                custom_content={null}
                custom_element={null}
                custom_method={null}
                disabled={null}
                element={null}
                global_status_id={null}
                href={null}
                icon="chevron_left"
                icon_position="right"
                icon_size="medium"
                id={null}
                innerRef={null}
                inner_ref={null}
                onMouseDown={[Function]}
                on_click={null}
                size="medium"
                skeleton={null}
                status={null}
                status_no_animation={null}
                status_props={null}
                status_state="error"
                stretch={null}
                tabIndex="-1"
                text={null}
                title={null}
                to={null}
                tooltip={null}
                type={null}
                variant="primary"
                wrap={null}
              >
                <button
                  aria-hidden={true}
                  className="dnb-button dnb-button--primary dnb-tabs__scroll-nav-button dnb-button--icon-position-right dnb-button--has-icon dnb-button--icon-size-medium dnb-button--size-medium"
                  disabled={false}
                  onMouseDown={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <Content
                    aria-hidden={true}
                    bounding={true}
                    class={null}
                    className="dnb-tabs__scroll-nav-button"
                    content={null}
                    custom_content={null}
                    custom_element={null}
                    custom_method={null}
                    disabled={null}
                    element={null}
                    global_status_id={null}
                    href={null}
                    icon="chevron_left"
                    icon_position="right"
                    icon_size="medium"
                    id={null}
                    innerRef={null}
                    inner_ref={null}
                    isIconOnly={true}
                    onMouseDown={[Function]}
                    on_click={null}
                    size="medium"
                    skeleton={false}
                    status={null}
                    status_no_animation={null}
                    status_props={null}
                    status_state="error"
                    stretch={null}
                    tabIndex="-1"
                    text={null}
                    title={null}
                    to={null}
                    tooltip={null}
                    type={null}
                    variant="primary"
                    wrap={null}
                  >
                    <span
                      className="dnb-button__bounding"
                      key="button-bounding"
                    />
                    <span
                      className="dnb-button__alignment"
                      key="button-text-empty"
                    >
                      ‌
                    </span>
                    <IconPrimary
                      alt={null}
                      aria-hidden={null}
                      attributes={null}
                      border={null}
                      className="dnb-button__icon"
                      color={null}
                      height={null}
                      icon="chevron_left"
                      inherit_color={true}
                      key="button-icon"
                      modifier={null}
                      size="medium"
                      skeleton={false}
                      title={null}
                      width={null}
                    >
                      <span
                        aria-hidden={true}
                        className="dnb-icon dnb-icon--medium dnb-button__icon dnb-icon--inherit-color"
                        data-test-id="chevron left icon"
                        role="presentation"
                      >
                        <chevron_left_medium>
                          <svg
                            fill="none"
                            height={24}
                            viewBox="0 0 24 24"
                            width={24}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m15 5-7 7 7 7"
                              stroke="#000"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                              strokeWidth={1.5}
                            />
                          </svg>
                        </chevron_left_medium>
                      </span>
                    </IconPrimary>
                  </Content>
                </button>
                <FormStatus
                  attributes={null}
                  class={null}
                  className={null}
                  global_status_id={null}
                  icon="error"
                  icon_size="medium"
                  id="null-form-status"
                  label={null}
                  no_animation={null}
                  role={null}
                  show={null}
                  size="default"
                  skeleton={null}
                  state="error"
                  status="error"
                  stretch={null}
                  text={null}
                  text_id="null-status"
                  title={null}
                  variant={null}
                  width_element={null}
                  width_selector={null}
                />
              </Button>
            </ScrollNavButton>
            <Tabs>
              <div
                aria-labelledby="linked-tab-third"
                className="dnb-tabs__tabs__tablist"
                onKeyDown={[Function]}
                role="tablist"
                tabIndex="0"
              >
                <div
                  className="dnb-tabs__button__snap"
                  key="tab-first"
                >
                  <button
                    aria-selected={false}
                    className="dnb-tabs__button"
                    data-tab-key="first"
                    id="linked-tab-first"
                    onClick={[Function]}
                    onKeyUp={[Function]}
                    onMouseEnter={[Function]}
                    role="tab"
                    tabIndex="-1"
                    type="button"
                  >
                    <span
                      className="dnb-tabs__button__title"
                    >
                      First
                    </span>
                    <Dummy>
                      <span
                        aria-hidden={true}
                        className="dnb-dummy"
                        hidden={true}
                      >
                        First
                      </span>
                    </Dummy>
                  </button>
                </div>
                <div
                  className="dnb-tabs__button__snap"
                  key="tab-second"
                >
                  <button
                    aria-selected={false}
                    className="dnb-tabs__button"
                    data-tab-key="second"
                    id="linked-tab-second"
                    onClick={[Function]}
                    onKeyUp={[Function]}
                    onMouseEnter={[Function]}
                    role="tab"
                    tabIndex="-1"
                    type="button"
                  >
                    <span
                      className="dnb-tabs__button__title"
                    >
                      Second
                    </span>
                    <Dummy>
                      <span
                        aria-hidden={true}
                        className="dnb-dummy"
                        hidden={true}
                      >
                        Second
                      </span>
                    </Dummy>
                  </button>
                </div>
                <div
                  className="dnb-tabs__button__snap focus selected"
                  key="tab-third"
                >
                  <button
                    aria-controls="linked-content"
                    aria-selected={true}
                    className="dnb-tabs__button focus selected"
                    data-tab-key="third"
                    id="linked-tab-third"
                    onClick={[Function]}
                    onKeyUp={[Function]}
                    onMouseEnter={[Function]}
                    role="tab"
                    tabIndex="-1"
                    type="button"
                  >
                    <span
                      className="dnb-tabs__button__title"
                    >
                      Third
                    </span>
                    <Dummy>
                      <span
                        aria-hidden={true}
                        className="dnb-dummy"
                        hidden={true}
                      >
                        Third
                      </span>
                    </Dummy>
                  </button>
                </div>
              </div>
            </Tabs>
            <ScrollNavButton
              className=""
              icon="chevron_right"
              onMouseDown={[Function]}
            >
              <Button
                aria-hidden={true}
                bounding={true}
                class={null}
                className="dnb-tabs__scroll-nav-button"
                custom_content={null}
                custom_element={null}
                custom_method={null}
                disabled={null}
                element={null}
                global_status_id={null}
                href={null}
                icon="chevron_right"
                icon_position="right"
                icon_size="medium"
                id={null}
                innerRef={null}
                inner_ref={null}
                onMouseDown={[Function]}
                on_click={null}
                size="medium"
                skeleton={null}
                status={null}
                status_no_animation={null}
                status_props={null}
                status_state="error"
                stretch={null}
                tabIndex="-1"
                text={null}
                title={null}
                to={null}
                tooltip={null}
                type={null}
                variant="primary"
                wrap={null}
              >
                <button
                  aria-hidden={true}
                  className="dnb-button dnb-button--primary dnb-tabs__scroll-nav-button dnb-button--icon-position-right dnb-button--has-icon dnb-button--icon-size-medium dnb-button--size-medium"
                  disabled={false}
                  onMouseDown={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <Content
                    aria-hidden={true}
                    bounding={true}
                    class={null}
                    className="dnb-tabs__scroll-nav-button"
                    content={null}
                    custom_content={null}
                    custom_element={null}
                    custom_method={null}
                    disabled={null}
                    element={null}
                    global_status_id={null}
                    href={null}
                    icon="chevron_right"
                    icon_position="right"
                    icon_size="medium"
                    id={null}
                    innerRef={null}
                    inner_ref={null}
                    isIconOnly={true}
                    onMouseDown={[Function]}
                    on_click={null}
                    size="medium"
                    skeleton={false}
                    status={null}
                    status_no_animation={null}
                    status_props={null}
                    status_state="error"
                    stretch={null}
                    tabIndex="-1"
                    text={null}
                    title={null}
                    to={null}
                    tooltip={null}
                    type={null}
                    variant="primary"
                    wrap={null}
                  >
                    <span
                      className="dnb-button__bounding"
                      key="button-bounding"
                    />
                    <span
                      className="dnb-button__alignment"
                      key="button-text-empty"
                    >
                      ‌
                    </span>
                    <IconPrimary
                      alt={null}
                      aria-hidden={null}
                      attributes={null}
                      border={null}
                      className="dnb-button__icon"
                      color={null}
                      height={null}
                      icon="chevron_right"
                      inherit_color={true}
                      key="button-icon"
                      modifier={null}
                      size="medium"
                      skeleton={false}
                      title={null}
                      width={null}
                    >
                      <span
                        aria-hidden={true}
                        className="dnb-icon dnb-icon--medium dnb-button__icon dnb-icon--inherit-color"
                        data-test-id="chevron right icon"
                        role="presentation"
                      >
                        <chevron_right_medium>
                          <svg
                            fill="none"
                            height={24}
                            viewBox="0 0 24 24"
                            width={24}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m9 19 7-7-7-7"
                              stroke="#000"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                              strokeWidth={1.5}
                            />
                          </svg>
                        </chevron_right_medium>
                      </span>
                    </IconPrimary>
                  </Content>
                </button>
                <FormStatus
                  attributes={null}
                  class={null}
                  className={null}
                  global_status_id={null}
                  icon="error"
                  icon_size="medium"
                  id="null-form-status"
                  label={null}
                  no_animation={null}
                  role={null}
                  show={null}
                  size="default"
                  skeleton={null}
                  state="error"
                  status="error"
                  stretch={null}
                  text={null}
                  text_id="null-status"
                  title={null}
                  variant={null}
                  width_element={null}
                  width_selector={null}
                />
              </Button>
            </ScrollNavButton>
          </div>
        </TabsList>
        <TabContent>
          <ContentWrapper
            content_spacing={true}
            content_style={null}
            id="linked"
            selected_key="third"
          />
        </TabContent>
      </div>
    </TabsWrapper>
  </Tabs>
  <CustomContent
    class={null}
    className={null}
    disabled={null}
    displayName="CustomContent"
    hash={null}
    id="linked"
    selected={null}
    title={null}
  >
    <ContentWrapper
      content_spacing={true}
      content_style={null}
      id="linked"
      selected_key={null}
    >
      <div
        className="dnb-tabs__content dnb-no-focus dnb-tabs__content--spacing"
        id="linked-content"
        role="tabpanel"
        tabIndex="-1"
      >
        third
      </div>
    </ContentWrapper>
  </CustomContent>
</LinkedContent>
`;

exports[`Tabs component have to match snapshot 1`] = `
<Tabs
  0={
    Object {
      "displayName": "Tabs",
      "props": Object {
        "align": "'left'",
        "children": Object {},
        "class": "class",
        "className": "className",
        "content": Object {},
        "content_spacing": "content_spacing",
        "content_style": "content_style",
        "data": "data",
        "id": "id",
        "label": "label",
        "no_border": "no_border",
        "on_change": [Function],
        "on_click": [Function],
        "on_focus": [Function],
        "on_mouse_enter": [Function],
        "prerender": "prerender",
        "prevent_rerender": "prevent_rerender",
        "render": [Function],
        "scroll": "scroll",
        "selected_key": "selected_key",
        "skeleton": "skeleton",
        "tab_element": Object {},
        "tabs_spacing": "tabs_spacing",
        "tabs_style": "tabs_style",
        "use_hash": "use_hash",
      },
    }
  }
  1={
    Object {
      "displayName": "Dummy",
      "props": Object {
        "children": "children",
      },
    }
  }
  2={
    Object {
      "displayName": "ScrollNavButton",
      "props": Object {
        "className": "className",
      },
    }
  }
  align="left"
  class={null}
  className={null}
  content={null}
  content_spacing={true}
  content_style={null}
  data={
    Array [
      Object {
        "key": "first",
        "title": "First",
      },
      Object {
        "key": "second",
        "title": "Second",
      },
      Object {
        "key": "third",
        "title": "Third",
      },
    ]
  }
  id="id"
  label={null}
  no_border={false}
  on_change={null}
  on_click={null}
  on_focus={null}
  on_mouse_enter={null}
  prerender={false}
  prevent_rerender={false}
  render={null}
  scroll={null}
  selected_key="second"
  skeleton={null}
  tab_element="button"
  tabs_spacing={null}
  tabs_style={null}
  use_hash={false}
>
  <TabsWrapper>
    <div
      className="dnb-tabs"
    >
      <TabsList>
        <div
          className="dnb-tabs__tabs dnb-tabs__tabs--left"
        >
          <ScrollNavButton
            className=""
            icon="chevron_left"
            onMouseDown={[Function]}
          >
            <Button
              aria-hidden={true}
              bounding={true}
              class={null}
              className="dnb-tabs__scroll-nav-button"
              custom_content={null}
              custom_element={null}
              custom_method={null}
              disabled={null}
              element={null}
              global_status_id={null}
              href={null}
              icon="chevron_left"
              icon_position="right"
              icon_size="medium"
              id={null}
              innerRef={null}
              inner_ref={null}
              onMouseDown={[Function]}
              on_click={null}
              size="medium"
              skeleton={null}
              status={null}
              status_no_animation={null}
              status_props={null}
              status_state="error"
              stretch={null}
              tabIndex="-1"
              text={null}
              title={null}
              to={null}
              tooltip={null}
              type={null}
              variant="primary"
              wrap={null}
            >
              <button
                aria-hidden={true}
                className="dnb-button dnb-button--primary dnb-tabs__scroll-nav-button dnb-button--icon-position-right dnb-button--has-icon dnb-button--icon-size-medium dnb-button--size-medium"
                disabled={false}
                onMouseDown={[Function]}
                tabIndex="-1"
                type="button"
              >
                <Content
                  aria-hidden={true}
                  bounding={true}
                  class={null}
                  className="dnb-tabs__scroll-nav-button"
                  content={null}
                  custom_content={null}
                  custom_element={null}
                  custom_method={null}
                  disabled={null}
                  element={null}
                  global_status_id={null}
                  href={null}
                  icon="chevron_left"
                  icon_position="right"
                  icon_size="medium"
                  id={null}
                  innerRef={null}
                  inner_ref={null}
                  isIconOnly={true}
                  onMouseDown={[Function]}
                  on_click={null}
                  size="medium"
                  skeleton={false}
                  status={null}
                  status_no_animation={null}
                  status_props={null}
                  status_state="error"
                  stretch={null}
                  tabIndex="-1"
                  text={null}
                  title={null}
                  to={null}
                  tooltip={null}
                  type={null}
                  variant="primary"
                  wrap={null}
                >
                  <span
                    className="dnb-button__bounding"
                    key="button-bounding"
                  />
                  <span
                    className="dnb-button__alignment"
                    key="button-text-empty"
                  >
                    ‌
                  </span>
                  <IconPrimary
                    alt={null}
                    aria-hidden={null}
                    attributes={null}
                    border={null}
                    className="dnb-button__icon"
                    color={null}
                    height={null}
                    icon="chevron_left"
                    inherit_color={true}
                    key="button-icon"
                    modifier={null}
                    size="medium"
                    skeleton={false}
                    title={null}
                    width={null}
                  >
                    <span
                      aria-hidden={true}
                      className="dnb-icon dnb-icon--medium dnb-button__icon dnb-icon--inherit-color"
                      data-test-id="chevron left icon"
                      role="presentation"
                    >
                      <chevron_left_medium>
                        <svg
                          fill="none"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m15 5-7 7 7 7"
                            stroke="#000"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.5}
                          />
                        </svg>
                      </chevron_left_medium>
                    </span>
                  </IconPrimary>
                </Content>
              </button>
              <FormStatus
                attributes={null}
                class={null}
                className={null}
                global_status_id={null}
                icon="error"
                icon_size="medium"
                id="null-form-status"
                label={null}
                no_animation={null}
                role={null}
                show={null}
                size="default"
                skeleton={null}
                state="error"
                status="error"
                stretch={null}
                text={null}
                text_id="null-status"
                title={null}
                variant={null}
                width_element={null}
                width_selector={null}
              />
            </Button>
          </ScrollNavButton>
          <Tabs>
            <div
              aria-labelledby="id-tab-second"
              className="dnb-tabs__tabs__tablist"
              onKeyDown={[Function]}
              role="tablist"
              tabIndex="0"
            >
              <div
                className="dnb-tabs__button__snap"
                key="tab-first"
              >
                <button
                  aria-selected={false}
                  className="dnb-tabs__button"
                  data-tab-key="first"
                  id="id-tab-first"
                  onClick={[Function]}
                  onKeyUp={[Function]}
                  onMouseEnter={[Function]}
                  role="tab"
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="dnb-tabs__button__title"
                  >
                    First
                  </span>
                  <Dummy>
                    <span
                      aria-hidden={true}
                      className="dnb-dummy"
                      hidden={true}
                    >
                      First
                    </span>
                  </Dummy>
                </button>
              </div>
              <div
                className="dnb-tabs__button__snap focus selected"
                key="tab-second"
              >
                <button
                  aria-controls="id-content"
                  aria-selected={true}
                  className="dnb-tabs__button focus selected"
                  data-tab-key="second"
                  id="id-tab-second"
                  onClick={[Function]}
                  onKeyUp={[Function]}
                  onMouseEnter={[Function]}
                  role="tab"
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="dnb-tabs__button__title"
                  >
                    Second
                  </span>
                  <Dummy>
                    <span
                      aria-hidden={true}
                      className="dnb-dummy"
                      hidden={true}
                    >
                      Second
                    </span>
                  </Dummy>
                </button>
              </div>
              <div
                className="dnb-tabs__button__snap"
                key="tab-third"
              >
                <button
                  aria-selected={false}
                  className="dnb-tabs__button"
                  data-tab-key="third"
                  id="id-tab-third"
                  onClick={[Function]}
                  onKeyUp={[Function]}
                  onMouseEnter={[Function]}
                  role="tab"
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="dnb-tabs__button__title"
                  >
                    Third
                  </span>
                  <Dummy>
                    <span
                      aria-hidden={true}
                      className="dnb-dummy"
                      hidden={true}
                    >
                      Third
                    </span>
                  </Dummy>
                </button>
              </div>
            </div>
          </Tabs>
          <ScrollNavButton
            className=""
            icon="chevron_right"
            onMouseDown={[Function]}
          >
            <Button
              aria-hidden={true}
              bounding={true}
              class={null}
              className="dnb-tabs__scroll-nav-button"
              custom_content={null}
              custom_element={null}
              custom_method={null}
              disabled={null}
              element={null}
              global_status_id={null}
              href={null}
              icon="chevron_right"
              icon_position="right"
              icon_size="medium"
              id={null}
              innerRef={null}
              inner_ref={null}
              onMouseDown={[Function]}
              on_click={null}
              size="medium"
              skeleton={null}
              status={null}
              status_no_animation={null}
              status_props={null}
              status_state="error"
              stretch={null}
              tabIndex="-1"
              text={null}
              title={null}
              to={null}
              tooltip={null}
              type={null}
              variant="primary"
              wrap={null}
            >
              <button
                aria-hidden={true}
                className="dnb-button dnb-button--primary dnb-tabs__scroll-nav-button dnb-button--icon-position-right dnb-button--has-icon dnb-button--icon-size-medium dnb-button--size-medium"
                disabled={false}
                onMouseDown={[Function]}
                tabIndex="-1"
                type="button"
              >
                <Content
                  aria-hidden={true}
                  bounding={true}
                  class={null}
                  className="dnb-tabs__scroll-nav-button"
                  content={null}
                  custom_content={null}
                  custom_element={null}
                  custom_method={null}
                  disabled={null}
                  element={null}
                  global_status_id={null}
                  href={null}
                  icon="chevron_right"
                  icon_position="right"
                  icon_size="medium"
                  id={null}
                  innerRef={null}
                  inner_ref={null}
                  isIconOnly={true}
                  onMouseDown={[Function]}
                  on_click={null}
                  size="medium"
                  skeleton={false}
                  status={null}
                  status_no_animation={null}
                  status_props={null}
                  status_state="error"
                  stretch={null}
                  tabIndex="-1"
                  text={null}
                  title={null}
                  to={null}
                  tooltip={null}
                  type={null}
                  variant="primary"
                  wrap={null}
                >
                  <span
                    className="dnb-button__bounding"
                    key="button-bounding"
                  />
                  <span
                    className="dnb-button__alignment"
                    key="button-text-empty"
                  >
                    ‌
                  </span>
                  <IconPrimary
                    alt={null}
                    aria-hidden={null}
                    attributes={null}
                    border={null}
                    className="dnb-button__icon"
                    color={null}
                    height={null}
                    icon="chevron_right"
                    inherit_color={true}
                    key="button-icon"
                    modifier={null}
                    size="medium"
                    skeleton={false}
                    title={null}
                    width={null}
                  >
                    <span
                      aria-hidden={true}
                      className="dnb-icon dnb-icon--medium dnb-button__icon dnb-icon--inherit-color"
                      data-test-id="chevron right icon"
                      role="presentation"
                    >
                      <chevron_right_medium>
                        <svg
                          fill="none"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m9 19 7-7-7-7"
                            stroke="#000"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.5}
                          />
                        </svg>
                      </chevron_right_medium>
                    </span>
                  </IconPrimary>
                </Content>
              </button>
              <FormStatus
                attributes={null}
                class={null}
                className={null}
                global_status_id={null}
                icon="error"
                icon_size="medium"
                id="null-form-status"
                label={null}
                no_animation={null}
                role={null}
                show={null}
                size="default"
                skeleton={null}
                state="error"
                status="error"
                stretch={null}
                text={null}
                text_id="null-status"
                title={null}
                variant={null}
                width_element={null}
                width_selector={null}
              />
            </Button>
          </ScrollNavButton>
        </div>
      </TabsList>
      <TabContent>
        <ContentWrapper
          content_spacing={true}
          content_style={null}
          id="id"
          selected_key="second"
        >
          <div
            aria-labelledby="id-tab-second"
            className="dnb-tabs__content dnb-no-focus dnb-tabs__content--spacing"
            id="id-content"
            role="tabpanel"
            tabIndex="-1"
          >
            <second>
              <h2>
                Second
              </h2>
            </second>
          </div>
        </ContentWrapper>
      </TabContent>
    </div>
  </TabsWrapper>
</Tabs>
`;

exports[`Tabs scss have to match default theme snapshot 1`] = `
"/*
* Tabs theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
* Button mixins
*
*/
.dnb-tabs__tabs:not(.dnb-section)::before {
  background-color: var(--color-black-8);
  box-shadow: 100vw 0 0 0 var(--color-black-8); }

.dnb-tabs__tabs__tablist:focus {
  border-radius: 0.5rem; }

.dnb-tabs--at-edge .dnb-tabs__scroll-nav-button:first-of-type {
  border-radius: 0 50% 50% 0; }

.dnb-tabs--at-edge .dnb-tabs__scroll-nav-button:last-of-type {
  border-radius: 50% 0 0 50%; }

.dnb-tabs--at-edge .dnb-tabs__tabs__tablist:focus {
  border-radius: 0; }

.dnb-tabs__content:focus {
  position: relative; }
  .dnb-tabs__content:focus::after {
    content: '';
    position: absolute;
    z-index: -1;
    top: 0.125rem;
    bottom: -0.5rem;
    left: -0.5rem;
    right: -0.5rem;
    max-width: 100vw;
    border-radius: 0.5rem;
    outline: none; }
    html[data-whatinput='keyboard'] .dnb-tabs__content:focus::after {
      --border-color: var(--color-emerald-green);
      box-shadow: 0 0 0 0.125rem var(--border-color);
      border-color: transparent; }
      @media screen and (-ms-high-contrast: none) {
        html[data-whatinput='keyboard'] .dnb-tabs__content:focus::after {
          box-shadow: 0 0 0 0.125rem var(--color-emerald-green); } }

.dnb-tabs__button__title {
  font-weight: var(--font-weight-regular);
  font-size: var(--font-size-basis);
  text-align: center;
  display: block;
  color: var(--color-sea-green);
  padding: 0.5rem 0 0.25rem 0; }

html:not([data-whatintent='touch']) .dnb-tabs__button:hover[disabled] {
  cursor: not-allowed; }

html:not([data-whatintent='touch']) .dnb-tabs__button:hover:not([disabled]) {
  background-color: var(--color-mint-green-50); }
  html:not([data-whatintent='touch']) .dnb-tabs__button:hover:not([disabled])::after {
    height: 2px;
    border-radius: 2px;
    background-color: var(--color-sea-green); }

.dnb-tabs__button:focus {
  overflow: visible; }
  .dnb-tabs__button:focus::before {
    content: '';
    position: absolute;
    z-index: 1;
    top: 0;
    left: -0.5rem;
    bottom: 0;
    right: -0.5rem;
    height: inherit;
    border-radius: inherit;
    outline: none; }
    html[data-whatinput='keyboard'] .dnb-tabs__button:focus::before {
      --border-color: var(--color-emerald-green);
      box-shadow: 0 0 0 0.125rem var(--border-color);
      border-color: transparent; }
      @media screen and (-ms-high-contrast: none) {
        html[data-whatinput='keyboard'] .dnb-tabs__button:focus::before {
          box-shadow: 0 0 0 0.125rem var(--color-emerald-green); } }
  .dnb-tabs__button:focus::before {
    top: 0.5rem;
    left: -0.375rem;
    right: -0.375rem;
    bottom: 0.5rem;
    border-radius: 1.5rem; }

.dnb-tabs__button[disabled] .dnb-tabs__button__title {
  color: var(--color-sea-green-30); }

.dnb-tabs__button:not([disabled]):active::after, .dnb-tabs__button:not([disabled]).selected::after {
  height: 2px;
  border-radius: 2px;
  background-color: var(--color-sea-green); }

.dnb-tabs__button:not([disabled]):active .dnb-tabs__button__title,
.dnb-tabs__button:not([disabled]).selected .dnb-tabs__button__title {
  color: var(--color-emerald-green); }

.dnb-tabs__button:not([disabled]).selected .dnb-tabs__button__title {
  font-weight: var(--font-weight-medium); }

.dnb-tabs__button span[hidden] {
  font-weight: var(--font-weight-medium); }
"
`;

exports[`Tabs scss have to match snapshot 1`] = `
"/*
* DNB Tabs
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * Scopes
 *
 */
/*
 * Document Reset
 *
 */
.dnb-tabs {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-tabs *,
  .dnb-tabs ::before,
  .dnb-tabs ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-tabs ::before,
  .dnb-tabs ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
 * Tabs component
 *
 */
.dnb-tabs__tabs {
  position: relative;
  z-index: 1;
  display: flex;
  align-items: center; }
  .dnb-tabs__tabs, .dnb-tabs__tabs.dnb-section--spacing {
    padding-bottom: 0; }
  .dnb-tabs__tabs__tablist {
    display: flex;
    flex: 0 1 auto;
    padding: 0 0.5rem;
    margin: 0 -0.5rem;
    overflow-x: auto;
    overscroll-behavior: contain;
    scrollbar-width: thin;
    -webkit-overflow-scrolling: touch;
    -ms-overflow-style: auto;
    scrollbar-color: var(--color-emerald-green) transparent;
    /* Hide scrollbar for Chrome, Safari */
    /* stylelint-disable-next-line */
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */ }
    .dnb-tabs__tabs__tablist:focus {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-tabs__tabs__tablist:focus {
        --border-color: var(--color-emerald-green);
        box-shadow: 0 0 0 0.125rem var(--border-color);
        border-color: transparent; }
        @media screen and (-ms-high-contrast: none) {
          html[data-whatinput='keyboard'] .dnb-tabs__tabs__tablist:focus {
            box-shadow: 0 0 0 0.125rem var(--color-emerald-green); } }
    html:not([data-visual-test]) .dnb-tabs__tabs__tablist {
      scroll-behavior: smooth; }
    html[data-visual-test] .dnb-tabs__tabs__tablist {
      scroll-behavior: auto !important; }
    .dnb-tabs__tabs__tablist::-webkit-scrollbar {
      display: none; }
  .dnb-tabs__tabs--left .dnb-tabs__tabs__tablist {
    justify-content: flex-start; }
  .dnb-tabs__tabs--right .dnb-tabs__tabs__tablist {
    flex-grow: 1;
    justify-content: flex-end; }
  .dnb-tabs__tabs--center .dnb-tabs__tabs__tablist {
    justify-content: center; }
  .dnb-tabs__tabs::before {
    content: '';
    position: absolute;
    z-index: -1;
    left: -100vw;
    bottom: 0;
    width: 100vw;
    height: 1px; }
  .dnb-tabs__tabs--no-border::before {
    content: none; }

.dnb-tabs:not(.dnb-tabs--has-scrollbar) .dnb-tabs__tabs__tablist {
  margin-left: -0.5rem;
  padding-left: 0.5rem; }

.dnb-tabs__scroll-nav-button {
  position: absolute;
  z-index: 2;
  display: none;
  opacity: 0;
  transition: opacity 600ms ease-out; }
  .dnb-tabs__scroll-nav-button.dnb-button--primary {
    background-color: var(--color-emerald-green); }
  .dnb-tabs__scroll-nav-button:first-of-type {
    left: -2.5rem; }
  .dnb-tabs__scroll-nav-button:last-of-type {
    right: -2.5rem; }
  .dnb-tabs__scroll-nav-button--visible {
    display: flex;
    opacity: 1; }
  .dnb-tabs__scroll-nav-button--hide {
    pointer-events: none;
    opacity: 0 !important; }

.dnb-tabs--at-edge .dnb-tabs__scroll-nav-button:first-of-type {
  left: 0; }

.dnb-tabs--at-edge .dnb-tabs__scroll-nav-button:last-of-type {
  right: 0; }

html[data-visual-test] .dnb-tabs .dnb-tabs__scroll-nav-button {
  transition: none; }

.dnb-tabs__button__snap {
  display: flex;
  padding: 0 1rem 0 1.5rem; }
  @media screen and (max-width: 40em) {
    .dnb-tabs__button__snap {
      padding: 0 1rem; } }
  .dnb-tabs__button__snap:first-of-type {
    padding-left: 0; }
  .dnb-tabs__button__snap:last-of-type {
    padding-right: 0.5rem; }

.dnb-tabs--has-scrollbar .dnb-tabs__button__snap:last-of-type {
  padding-right: 1.5rem; }

.dnb-tabs__button,
.dnb-core-style .dnb-tabs .dnb-tabs__button {
  position: relative;
  z-index: 1;
  user-select: none;
  -webkit-user-select: none;
  margin: 0;
  padding: 0 0.125rem;
  /* 1/16*4 */
  background-color: transparent;
  border-bottom: 1px solid transparent;
  cursor: pointer;
  outline: none;
  border: none;
  font-size: var(--font-size-basis);
  line-height: var(--line-height-basis);
  text-decoration: none;
  white-space: nowrap; }
  .dnb-tabs__button__title .dnb-icon,
  .dnb-core-style .dnb-tabs .dnb-tabs__button__title .dnb-icon {
    font-size: var(--font-size-small);
    transform: translateY(-0.125rem); }
  .dnb-tabs__button .dnb-dummy,
  .dnb-core-style .dnb-tabs .dnb-tabs__button .dnb-dummy {
    display: flex;
    flex-direction: column;
    height: 0;
    visibility: hidden;
    overflow: hidden; }
  .dnb-tabs__button .dnb-dummy,
  .dnb-core-style .dnb-tabs .dnb-tabs__button .dnb-dummy {
    margin-top: 0.25rem; }
  .dnb-tabs__button::after,
  .dnb-core-style .dnb-tabs .dnb-tabs__button::after {
    content: '';
    position: absolute;
    z-index: -1;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 1px; }

.dnb-tabs__content--spacing {
  padding-top: 2rem; }
"
`;
